--- a/iqiyi-series.html
+++ b/iqiyi-series.html
@@ -1,85 +1,19 @@
-	{
-   "name": "IQIYI Series",
-   "author": "ผู้เฒ่าพเนจร",
-   "url": "",
-   "image": "",
-   "info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
-		 
-   "groups": [
-
-
-			{
-				"name": "♥ 🇹🇭 IQIYI Series page 1 🇹🇭♥",
-				"image": "https://www.dropbox.com/scl/fi/4c9o83rtxjtwmelqq6bvh/digital-tv.jpg?rlkey=gbxqeifo149bocu1ufis4k8o9&dl=1",
-				"url": "https://www.dropbox.com/scl/fi/0llqamjut5e2b3seifxst/iqiyi-1.html?rlkey=kkbayjw76vky3m2r2kz5c5fy5&dl=1",
-				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
-				"import": false},
-
-			{
-				"name": "♥ 🇹🇭 IQIYI Series page 2 🇹🇭♥",
-				"image": "https://www.dropbox.com/scl/fi/33jpvpxm0g9k6dbtoonbb/small-sport-tv.jpg?rlkey=6jw8x2bnik61w7b9imarndgo1&dl=1",
-				"url": "https://www.dropbox.com/scl/fi/itplqclwoef5odk4gzeyf/iqiyi-2.html?rlkey=6ewzq0g9fqyk8z49owd5ffual&dl=1",
-				"import": false},
-
-			{
-				"name": "♥ 🇹🇭 IQIYI Series page 3 🇹🇭♥",
-				"image": "https://www.dropbox.com/scl/fi/33jpvpxm0g9k6dbtoonbb/small-sport-tv.jpg?rlkey=6jw8x2bnik61w7b9imarndgo1&dl=1",
-				"url": "https://www.dropbox.com/scl/fi/7dalpy7wyp5io45l8b38r/iqiyi-3.html?rlkey=m7lx7qj0p4n6whxp72vmkzpd4&dl=1",
-				"import": false},
-
-			{
-				"name": "♥ 🇹🇭 IQIYI Series page 4 🇹🇭♥",
-				"image": "https://www.dropbox.com/scl/fi/4c9o83rtxjtwmelqq6bvh/digital-tv.jpg?rlkey=gbxqeifo149bocu1ufis4k8o9&dl=1",
-				"url": "https://www.dropbox.com/scl/fi/6sbu6olv2g9pbvhp7x9be/iqiyi-4.html?rlkey=u27nt6zxlybcxuko8mck9xazj&dl=1",
-				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
-				"import": false},
-
-			{
-				"name": "♥ 🇹🇭 IQIYI Series page 5 🇹🇭♥",
-				"image": "https://www.dropbox.com/scl/fi/33jpvpxm0g9k6dbtoonbb/small-sport-tv.jpg?rlkey=6jw8x2bnik61w7b9imarndgo1&dl=1",
-				"url": "https://www.dropbox.com/scl/fi/qbqjsi945lw77xdaijzlp/iqiyi-5.html?rlkey=ixxc398meat3cwumjn50w1ciw&dl=1",
-				"import": false},
-
-			{
-				"name": "♥ 🇹🇭 IQIYI Series page 6 🇹🇭♥",
-				"image": "https://www.dropbox.com/scl/fi/33jpvpxm0g9k6dbtoonbb/small-sport-tv.jpg?rlkey=6jw8x2bnik61w7b9imarndgo1&dl=1",
-				"url": "https://www.dropbox.com/scl/fi/43htdrf0fqn9g1jo9xh4b/iqiyi-6.html?rlkey=2kbch9d5ib4l1qwlq51cc6twr&dl=1",
-				"import": false},
-
-			{
-				"name": "♥ 🇹🇭 IQIYI Series page 7 🇹🇭♥",
-				"image": "https://www.dropbox.com/scl/fi/4c9o83rtxjtwmelqq6bvh/digital-tv.jpg?rlkey=gbxqeifo149bocu1ufis4k8o9&dl=1",
-				"url": "https://www.dropbox.com/scl/fi/nvhffwkfnwxqw9fm1jftb/iqiyi-7.html?rlkey=woqweklvrnxjhxcazlcswxccu&dl=1",
-				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
-				"import": false},
-
-			{
-				"name": "♥ 🇹🇭 IQIYI Series page 8 🇹🇭♥",
-				"image": "https://www.dropbox.com/scl/fi/33jpvpxm0g9k6dbtoonbb/small-sport-tv.jpg?rlkey=6jw8x2bnik61w7b9imarndgo1&dl=1",
-				"url": "https://www.dropbox.com/scl/fi/abq1dww4jix23d3ze5e1u/iqiyi-8.html?rlkey=1pvbkjzqp8wb4qgtzpfv55wnj&dl=1",
-				"import": false},
-
-			{
-				"name": "♥ 🇹🇭 IQIYI Series page 9 🇹🇭♥",
-				"image": "https://www.dropbox.com/scl/fi/33jpvpxm0g9k6dbtoonbb/small-sport-tv.jpg?rlkey=6jw8x2bnik61w7b9imarndgo1&dl=1",
-				"url": "https://www.dropbox.com/scl/fi/51dws7m1i6pwqqucdr462/iqiyi-9.html?rlkey=fn9wneem4vda4h906ffkkf1s9&dl=1",
-				"import": false},
-
-
-]
-}
+{"name": "🆂🅴🆁🅸🅴🆂 ➍","author": "🆂🅴🆁🅸🅴🆂 ➍","url": "","image": "http://guflix.streaming-fast.com/logo/2series.jpg","groups": [{"name": "🎬 หน้า 1","image": "http://guflix.streaming-fast.com/logo/2series.jpg","url": "http://idooxtream.streaming-fast.com/idooxtreamwiseplay/https:/www.dooseries4k.com/category/iqiyi/118b4384bfea42041cd88cb5e3bd2075/1/series4_page.w3u","import": false},{"name": "🎬 หน้า 2","image": "http://guflix.streaming-fast.com/logo/2series.jpg","url": "http://idooxtream.streaming-fast.com/idooxtreamwiseplay/https:/www.dooseries4k.com/category/iqiyi/118b4384bfea42041cd88cb5e3bd2075/2/series4_page.w3u","import": false},{"name": "🎬 หน้า 3","image": "http://guflix.streaming-fast.com/logo/2series.jpg","url": "http://idooxtream.streaming-fast.com/idooxtreamwiseplay/https:/www.dooseries4k.com/category/iqiyi/118b4384bfea42041cd88cb5e3bd2075/3/series4_page.w3u","import": false},{"name": "🎬 หน้า 4","image": "http://guflix.streaming-fast.com/logo/2series.jpg","url": "http://idooxtream.streaming-fast.com/idooxtreamwiseplay/https:/www.dooseries4k.com/category/iqiyi/118b4384bfea42041cd88cb5e3bd2075/4/series4_page.w3u","import": false},{"name": "🎬 หน้า 5","image": "http://guflix.streaming-fast.com/logo/2series.jpg","url": "http://idooxtream.streaming-fast.com/idooxtreamwiseplay/https:/www.dooseries4k.com/category/iqiyi/118b4384bfea42041cd88cb5e3bd2075/5/series4_page.w3u","import": false},{"name": "🎬 หน้า 6","image": "http://guflix.streaming-fast.com/logo/2series.jpg","url": "http://idooxtream.streaming-fast.com/idooxtreamwiseplay/https:/www.dooseries4k.com/category/iqiyi/118b4384bfea42041cd88cb5e3bd2075/6/series4_page.w3u","import": false},{"name": "🎬 หน้า 7","image": "http://guflix.streaming-fast.com/logo/2series.jpg","url": "http://idooxtream.streaming-fast.com/idooxtreamwiseplay/https:/www.dooseries4k.com/category/iqiyi/118b4384bfea42041cd88cb5e3bd2075/7/series4_page.w3u","import": false},{"name": "🎬 หน้า 8","image": "http://guflix.streaming-fast.com/logo/2series.jpg","url": "http://idooxtream.streaming-fast.com/idooxtreamwiseplay/https:/www.dooseries4k.com/category/iqiyi/118b4384bfea42041cd88cb5e3bd2075/8/series4_page.w3u","import": false},{"name": "🎬 หน้า 9","image": "http://guflix.streaming-fast.com/logo/2series.jpg","url": "http://idooxtream.streaming-fast.com/idooxtreamwiseplay/https:/www.dooseries4k.com/category/iqiyi/118b4384bfea42041cd88cb5e3bd2075/9/series4_page.w3u","import": false},]}
 
 <html>
 <head>
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="/icon.jpg" type="image/x-icon">
-  	<title>ผู้เฒ่าพเนจร</title>
+  	<title>streaming-fast.com</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="description" content="ผู้เฒ่าพเนจร"> 
-<meta http-equiv=refresh content=1;URL=https://www.google.co.th/>
+    <meta name="description" content="ไม่จำเป็นต้องกดเข้าลิงค์">
+    <meta name="author" content="streaming-fast.com">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0;url=http://streaming-fast.com/">
+</head>
 <body bgcolor="000000">
 <center>
-  <h2><img src="https://www.dropbox.com/scl/fi/vbyxgw2rrqcdme8t4ch08/.png?rlkey=y9eikxi47djf513c20eh6kjbz&dl=1"></h2>
+  <h2><img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Youtube_loading_symbol_1_(wobbly).gif"></h2>
 </center>
 </body>
 </html>
