--- a/anime-indy.html
+++ b/anime-indy.html
@@ -1,17 +1,19 @@
 {
-"name": "anime-indy","image": "https://sv1.picz.in.th/images/2023/05/16/FNBwO0.gif",
-"author": "Update 26-08-2023",
+"name": "anime-indy",
+"image": "https://www.dropbox.com/scl/fi/dfd9bu12778m2kiqtxotd/2.jpg?rlkey=jin0oxzbgyqg4a4emljvuris0&dl=1",
+"author": "ผู้เฒ่าพเนจร",
+"info": "Copyright by ผู้เฒ่าพเนจร",
 "url": "https://drive.google.com/uc?id=13RFqRGSOZBSTOwq-YvFeE9818hnuY0he",
 "groups": [
 	
   
-		{"name":" ","image": "https://sv1.picz.in.th/images/2023/05/16/FNhgte.gif",
+		{"name":" Anime พากย์ไทย ","image": "https://www.dropbox.com/scl/fi/artpiv67entosf7xllmjr/1-cartoon-1.jpg?rlkey=4fioesvaac2umfcs3zxlha3w8&dl=1",
 	"url": "https://drive.google.com/uc?id=13CT5P3c3ga0efMP7G0kjJXMOrZAw7izp","import": false},  
 
-		{"name":" ","image": "https://sv1.picz.in.th/images/2023/05/16/FNhRJk.gif",
+		{"name":" Anime ซับไทย ","image": "https://www.dropbox.com/scl/fi/t7vigv87or6wko9p0db15/carton-2.jpg?rlkey=3wty2wveqdtmpdmyhxs0n2l8z&dl=1",
 	"url": "https://drive.google.com/uc?id=13AwBp6R_urOhdGUlramh6JnqUxE_Yip9","import": false},  
 	
-		{"name":" ","image": "https://sv1.picz.in.th/images/2023/05/16/FNh950.gif",
+		{"name":" Anime ","image": "https://www.dropbox.com/scl/fi/gr02ynmtmxepon1hqpkss/cartoon-tv-yellow.jpg?rlkey=iyanx2sgi5x5ppvoxe2fwn29l&dl=1",
 	"url": "https://drive.google.com/uc?id=13GtlR5ms01ZS6NTp1bV_MuhLRS7FE8j6","import": false},  
 
 
